# ai-feedback-pipeline

./: .bandit  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TESTING_COVERAGE.md  TEST_COVERAGE_IMPROVEMENTS.md  analyze_coverage.py  config.py  conftest.py  docker-compose.yml  embed.py  extract.py  llm_client.py  main.py  notion.py  pipeline.py  pyproject.toml  pytest.ini  rag.py  requirements.txt  server.py  server_full.py  test_basic_imports.py  test_comprehensive_suite.py  test_minimal.py  test_output.json  test_vector_stores.py
.github/: dependabot.yml  secret_scanning.yml
.github/workflows/: ci.yml
data/transcripts/: sample_customer_call.txt
test_transcripts/: transcript_1.txt  transcript_2.txt  transcript_3.txt
tests/: test_comprehensive.py  test_core.py  test_embed.py  test_embed_comprehensive.py  test_extract_complete.py  test_extract_comprehensive.py  test_extract_edge_cases.py  test_feedback_validation.py  test_llm_client.py  test_main.py  test_main_comprehensive.py  test_notion.py  test_notion_comprehensive.py  test_pipeline.py  test_rag.py  test_rag_comprehensive.py  test_server.py  test_server_comprehensive.py  test_simple.py
