[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-feedback-pipeline"
version = "1.0.0"
description = "AI-Powered Feedback Categorization & RAG Pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["ai", "feedback", "rag", "llm", "vector-search", "notion"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "langchain>=0.1.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-community>=0.0.20",
  "sentence-transformers>=2.2.2",
  "chromadb>=0.4.0",
  "pinecone>=5.0.0",
  "notion-client>=2.2.1",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "click>=8.1.0",
  "httpx>=0.25.0",
  "numpy>=1.24.0",
  "pandas>=2.1.0",
  "langchain-ollama>=0.3.3",
  "langchain-huggingface>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "types-requests>=2.31.0",
]

[project.scripts]
ai-feedback-pipeline = "main:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["*.py", "README.md", "pyproject.toml", ".ruff.toml"]

[project.urls]
Homepage = "https://github.com/yourusername/ai-feedback-pipeline"
Repository = "https://github.com/yourusername/ai-feedback-pipeline"
Issues = "https://github.com/yourusername/ai-feedback-pipeline/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501",   # line too long, handled by black
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
  "SIM117", # nested with statements (acceptable in tests)
  "SIM",    # flake8-simplify rules (disabled)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "ARG", "FBT", "SIM117"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "langchain.*",
  "chromadb.*",
  "pinecone.*",
  "notion_client.*",
  "tests.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

# UV Configuration
[tool.uv]
dev-dependencies = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "types-requests>=2.31.0",
  "pytest-cov>=6.2.1",
]

[tool.uv.sources]
# Optional: specify custom package sources if needed
# Example: custom-package = { git = "https://github.com/user/repo.git" }

[tool.coverage.run]
source = [
  "config.py",
  "embed.py",
  "extract.py",
  "llm_client.py",
  "main.py",
  "notion.py",
  "pipeline.py",
  "rag.py",
  "server.py",
]
omit = [
  "tests/*",
  "tests_backup/*",
  "__pycache__/*",
  ".venv/*",
  "*/site-packages/*",
  "conftest.py",
  "test_*.py",
  "*_test.py",
  "*/test_*",
  "*/tests/*",
  "*.bak",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "miss"
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
# Show files that are below certain thresholds
fail_under = 43
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
